--- a/main_app/templates/signup.html
+++ b/main_app/templates/signup.html
@@ -24,10 +24,17 @@
         </ul>
 
         {% for field in guest_form %}
+        {% if field.label == 'Exp Month' or field.label == 'Exp Year' or field.label == 'CVV' %}
+        <div class="form-floating form-field-small">
+          {{ field }}
+          {{ field.label_tag }}
+        </div>
+        {% else %}
         <div class="form-floating">
           {{ field }}
           {{ field.label_tag }}
         </div>
+        {% endif %}
         {% endfor %}
         <input class="base-btn" type="submit" value="Submit" />
       </form>
